--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 </head>
 <body>
     <h1>Hello, World! View Your 3D Model</h1>
-    <a rel="ar" href="https://drive.google.com/file/d/1n7b7DJFE0WaeaKvzf5ovzJmeEsw5-IZe/view?usp=drive_link">
+    <a rel="ar" href="https://drive.google.com/uc?export=download&id=1n7b7DJFE0WaeaKvzf5ovzJmeEsw5-IZe">
         <img src="ar-icon.png" alt="View in AR" width="100">
     </a>
 </body>
