--- a/index.html
+++ b/index.html
@@ -6,9 +6,12 @@
     <title>Quick Look 3D Demo</title>
 </head>
 <body>
-    <h1>Hello, World! View Your 3D Model</h1>
+    <h1>CompARe App</h1>
     <a rel="ar" href="https://drive.google.com/uc?export=download&id=1n7b7DJFE0WaeaKvzf5ovzJmeEsw5-IZe">
-        <img src="ar-icon.png" alt="View in AR" width="100">
+        <img src="ar-icon.png" alt="Google hosted Quick Look" width="100">
+    </a>
+    <a rel="ar" href="ferrari_f40.usdz">
+        <img src="ar-icon.png" alt="Github hosted Quick Look" width="100">
     </a>
 </body>
 </html>
