--- a/index.html
+++ b/index.html
@@ -8,10 +8,13 @@
 <body>
     <h1>CompARe App</h1>
     <a rel="ar" href="https://drive.google.com/uc?export=download&id=1n7b7DJFE0WaeaKvzf5ovzJmeEsw5-IZe">
-        <img src="ar-icon.png" alt="Google hosted Quick Look" width="100">
+        <img src="ar.png" alt="Google hosted Quick Look" width="100">
     </a>
     <a rel="ar" href="ferrari_f40.usdz">
-        <img src="ar-icon.png" alt="Github hosted Quick Look" width="100">
+        <img src="ar.png" alt="Github hosted Quick Look" width="100">
+    </a>
+    <a rel="ar" href="ferrari_f40.glb">
+        <img src="ar.png" alt="Google hosted Model Viewer" width="100">
     </a>
 </body>
 </html>
