--- a/index.html
+++ b/index.html
@@ -7,9 +7,7 @@
 </head>
 <body>
     <h1>CompARe App</h1>
-    <a rel="ar" href="https://drive.google.com/uc?export=download&id=1n7b7DJFE0WaeaKvzf5ovzJmeEsw5-IZe">
-        <img src="ar.png" alt="Google hosted Quick Look" width="100">
-    </a>
+    <p>Click on the images below to view the 3D model in AR. First IOS and second button on Android</p>
     <a rel="ar" href="ferrari_f40.usdz">
         <img src="ar.png" alt="Github hosted Quick Look" width="100">
     </a>
