--- a/index.html
+++ b/index.html
@@ -15,10 +15,10 @@
         <img src="ar.png" alt="Google hosted Model Viewer" width="100">
     </a>
     <p>Android</p>
-    <a rel="ar" href="intent://arvr.google.com/scene-viewer/1.0?file=ferrari_f40.glb">
+    <a rel="ar" href="intent://arvr.google.com/scene-viewer/1.0?file=https://github.com/tink3r-t/tink3r-t.github.io/blob/main/ferrari_f40.glb#Intent;scheme=https;package=com.google.android.googlequicksearchbox;action=android.intent.action.VIEW;S.browser_fallback_url=https://developers.google.com/ar;end;">
         <img src="ar.png" alt="Github hosted Quick Look" width="100">
     </a>
-    <a rel="ar" href="intent://arvr.google.com/scene-viewer/1.0?file=f40test.glb#Intent;scheme=https;package=com.google.android.googlequicksearchbox;action=android.intent.action.VIEW;S.browser_fallback_url=https://developers.google.com/ar;end;">
+    <a rel="ar" href="intent://arvr.google.com/scene-viewer/1.0?file=https://github.com/tink3r-t/tink3r-t.github.io/blob/main/f40test.glb#Intent;scheme=https;package=com.google.android.googlequicksearchbox;action=android.intent.action.VIEW;S.browser_fallback_url=https://developers.google.com/ar;end;">
         <img src="ar.png" alt="Google hosted Model Viewer" width="100">
     </a>
     <p>Web Example</p>
