--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>Quick Look 3D Demo</title>
 </head>
 <body>
-    <h1>CompARe App v0.1a</h1>
+    <h1>CompARe App v0.1b</h1>
     <p>IOS</p>
     <a rel="ar" href="ferrari_f40.usdz">
         <img src="ar.png" alt="Github hosted Quick Look" width="100">
@@ -15,10 +15,10 @@
         <img src="ar.png" alt="Google hosted Model Viewer" width="100">
     </a>
     <p>Android</p>
-    <a rel="ar" href="intent://arvr.google.com/scene-viewer/1.0?file=https://github.com/tink3r-t/tink3r-t.github.io/blob/main/ferrari_f40.glb#Intent;scheme=https;package=com.google.android.googlequicksearchbox;action=android.intent.action.VIEW;S.browser_fallback_url=https://developers.google.com/ar;end;">
+    <a rel="ar" href="intent://arvr.google.com/scene-viewer/1.0?file=https://raw.githubusercontent.com/tink3r-t/tink3r-t.github.io/blob/main/ferrari_f40.glb#Intent;scheme=https;package=com.google.android.googlequicksearchbox;action=android.intent.action.VIEW;S.browser_fallback_url=https://developers.google.com/ar;end;">
         <img src="ar.png" alt="Github hosted Quick Look" width="100">
     </a>
-    <a rel="ar" href="intent://arvr.google.com/scene-viewer/1.0?file=https://github.com/tink3r-t/tink3r-t.github.io/blob/main/fixed.glb#Intent;scheme=https;package=com.google.android.googlequicksearchbox;action=android.intent.action.VIEW;S.browser_fallback_url=https://developers.google.com/ar;end;">
+    <a rel="ar" href="intent://arvr.google.com/scene-viewer/1.0?file=https://raw.githubusercontent.com/tink3r-t/tink3r-t.github.io/blob/main/fixed.glb#Intent;scheme=https;package=com.google.android.googlequicksearchbox;action=android.intent.action.VIEW;S.browser_fallback_url=https://developers.google.com/ar;end;">
         <img src="ar.png" alt="Google hosted Model Viewer" width="100">
     </a>
     <p>Web Example</p>
