--- a/index.html
+++ b/index.html
@@ -14,6 +14,13 @@
     <a rel="ar" href="ftest.usdz">
         <img src="ar.png" alt="Google hosted Model Viewer" width="100">
     </a>
+    <p>Reality Composer</p>
+    <a rel="ar" href="RCAs.usdz">
+        <img src="ar.png" alt="Github hosted Quick Look" width="100">
+    </a>
+    <a rel="ar" href="Rt.reality">
+        <img src="ar.png" alt="Google hosted Model Viewer" width="100">
+    </a>
     <p>Android</p>
     <a rel="ar" href="intent://arvr.google.com/scene-viewer/1.0?file=https://github.com/tink3r-t/tink3r-t.github.io/blob/main/ferrari_f40.glb?raw=true#Intent;scheme=https;package=com.google.android.googlequicksearchbox;action=android.intent.action.VIEW;S.browser_fallback_url=https://developers.google.com/ar;end;">
         <img src="ar.png" alt="Github hosted Quick Look" width="100">
