--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <a rel="ar" href="RCAs.usdz">
         <img src="ar.png" alt="Github hosted Quick Look" width="100">
     </a>
-    <a rel="ar" href="Rt.reality">
+    <a rel="ar" href="b2s.usdz">
         <img src="ar.png" alt="Google hosted Model Viewer" width="100">
     </a>
     <p>Android</p>
