--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>Quick Look 3D Demo</title>
 </head>
 <body>
-    <h1>CompARe App v0.3</h1>
+    <h1>CompARe App v0.3a</h1>
     <p>IOS</p>
     <a rel="ar" href="ferrari_f40.usdz">
         <img src="ar.png" alt="Github hosted Quick Look" width="100">
