--- a/index.html
+++ b/index.html
@@ -6,12 +6,12 @@
     <title>Quick Look 3D Demo</title>
 </head>
 <body>
-    <h1>CompARe App v0.3r</h1>
+    <h1>CompARe App v0.3f</h1>
     <p>IOS</p>
     <a rel="ar" href="ferrari_f40.usdz">
         <img src="ar.png" alt="Github hosted Quick Look" width="100">
     </a>
-    <a rel="ar" href="ftest.usdz">
+    <a rel="ar" href="fixed.usdz">
         <img src="ar.png" alt="Google hosted Model Viewer" width="100">
     </a>
     <p>Reality Composer</p>
